# maymayinvest

./: .gitignore  README.md
v1/: README.md
v1/backend/: .env.example  .gitignore  .importlinter  Makefile  pyproject.toml
v1/backend/alembic/: env.py
v1/backend/alembic/versions/: 0001_baseline.py  0002_decision_dossier.py  0003_events.py  0004_pending_signals.py
v1/backend/app/: main.py
v1/backend/app/api/: deps.py  metrics.py  routes_operator.py
v1/backend/app/auth/: identity.py
v1/backend/app/backtest/: __init__.py  context.py  fill_model.py  runner.py
v1/backend/app/brokers/: __init__.py  alpaca.py  base.py  paper.py
v1/backend/app/core/: config.py  ids.py  logging.py  money.py  time.py
v1/backend/app/domain/: bar.py  decision.py  event.py  instrument.py  order.py  position.py  signal.py
v1/backend/app/engine/: broker_registry.py  context.py
v1/backend/app/intel/: _subprocess.py  adapters.py  review_pipeline.py  router.py
v1/backend/app/operator/: __init__.py  capabilities.py  context.py  quota.py  registry.py
v1/backend/app/persistence/: db.py  models.py
v1/backend/app/strategy/: __init__.py  base.py
v1/backend/scripts/: capture_event_to_corpus.py  demo_backtest.py  eval_analyzer_determinism.py  eval_reviewer.py  eval_reviewer_case3_consistency.py  review_first_real_dossier.py  selftest_api.py  selftest_e2e.py
v1/backend/scripts/git-hooks/: README.md  commit-msg  pre-commit
v1/backend/tests/: conftest.py
v1/backend/tests/eval/: reviewer_eval_set.py
v1/backend/tests/fixtures/: edgar_8k_aapl_buyback_2024.json  edgar_8k_acquisition_announcement_2024.json  edgar_8k_bylaw_amendment_2024.json  edgar_8k_guidance_miss_with_buyback_2024.json  edgar_8k_late_filed_after_nt_2024.json  edgar_8k_material_contract_win_2024.json  edgar_8k_reit_ffo_beat_with_refi_overhang_2024.json  edgar_8k_routine_officer_departure_2024.json  edgar_8k_saas_beat_with_secondary_2024.json  (+2 more)
(+83 files in other folders)
