[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "maymayinvest-v1-backend"
version = "0.0.1"
description = "AI-native investment management — v1 backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "asyncpg>=0.29",
    "structlog>=24.4",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "alpaca-py>=0.30",
    "vectorbt>=0.26",
    "pandas>=2.2",
    "numpy>=1.26",
    "exchange-calendars>=4.5",
    "python-jose[cryptography]>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "SIM102", "B008"]   # B008: FastAPI's Depends(...) defaults are idiomatic

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Strategy code must not import engine or backtest"
type = "forbidden"
source_modules = ["app.strategy"]
forbidden_modules = ["app.backtest", "app.engine"]

[[tool.importlinter.contracts]]
name = "Domain layer is pure (no I/O dependencies)"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = [
    "app.persistence",
    "app.api",
    "app.brokers",
    "app.data",
    "app.engine",
    "app.backtest",
    "app.operator",
]
